<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/readd_bg"
     >
    
    <include 
        layout="@layout/topbar"
        android:id="@+id/topbar"
        />
     <LinearLayout 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_input9">

        <RelativeLayout
            android:id="@+id/relayout_name"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/goods_tv_name"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_name"
                android:layout_alignBottom="@+id/tv_name"
                android:layout_toRightOf="@+id/tv_name"
                android:background="@null"
                android:ems="10"
                android:hint="@string/goods_ed_name"
                android:textSize="14sp" />
            
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#c8c8c8" />
        <RelativeLayout
            android:id="@+id/relayout_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/goods_tv_phone"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ed_phones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_phone"
                android:layout_alignBottom="@+id/tv_phone"
                android:layout_toRightOf="@+id/tv_phone"
                android:background="@null"
                android:ems="10"
                android:hint="@string/goods_ed_phone"
                android:textSize="14sp" />
            
        </RelativeLayout>
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#c8c8c8" />
        
    </LinearLayout>
     <LinearLayout 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_input9">

        <RelativeLayout
            android:id="@+id/relayout_province"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/goods_tv_province"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_toRightOf="@+id/textView1"
                android:text="@string/goods_view_province" />
            
        </RelativeLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#c8c8c8" />
        <RelativeLayout
            android:id="@+id/relayout_city"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/goods_tv_city"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:text="@string/goods_view_city" />

        </RelativeLayout>
            <TextView
	            android:id="@+id/textView7"
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#c8c8c8" />
        <RelativeLayout
            android:id="@+id/relayout_area"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/goods_tv_area"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView4"
                android:layout_toRightOf="@+id/textView4"
                android:text="@string/goods_view_area" />

        </RelativeLayout>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#c8c8c8" />
        <RelativeLayout
            android:id="@+id/relayout_address"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/goods_tv_address"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ed_addrss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView6"
                android:layout_alignBottom="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:background="@null"
                android:ems="10"
                android:hint="@string/goods_ed_address"
                android:textSize="14sp" />
            
        </RelativeLayout>
        
    </LinearLayout>
</LinearLayout>
